--- a/pressgang/media/pressgang/_sass/core/_settings.scss
+++ b/pressgang/media/pressgang/_sass/core/_settings.scss
@@ -37,6 +37,7 @@ $color-text-header: #5f5f5a;
 $color-text-strong: #000;
 $color-text-success: #090;
 $color-text-weak: #555;
+$color-text-very-weak: #999;
 $color-text: #333;
 
 // Dimensions
