The is public field now displays properly on the install options form.

--- a/pressgang/media/pressgang/_sass/install/_options.scss
+++ b/pressgang/media/pressgang/_sass/install/_options.scss
@@ -82,6 +82,7 @@ body.install-options {
 				position: absolute;
 				left: 22em;
 				top: 0;
+				min-width: 22em;
 
 				li {
 					display: inline;
