Actions can now display their own links in the other actions section at the end of a completed action.

--- a/pressgang/templates/pressgang/actions/record.html
+++ b/pressgang/templates/pressgang/actions/record.html
@@ -113,6 +113,7 @@
 					<li class="action">
 						<a href="{% url pressgang:list-blogs %}">{% trans "Manage Blogs" %}</a>
 					</li>
+					{% block extra_actions %}{% endblock %}
 				</ul>
 
 			</div>
