--- a/pressgang/templates/pressgang/actions/execute.html
+++ b/pressgang/templates/pressgang/actions/execute.html
@@ -39,6 +39,10 @@
 
 {% block body %}
 
-	<div id="action-log"></div>
+	<div id="action-log">
+		<p class="follow action-pending">
+			{% trans "Initializing" %}&hellip;
+		</p>
+	</div>
 
 {% endblock %}
