The current action in a progress log no longer pulses.

--- a/pressgang/media/pressgang/_sass/actions/_progress.scss
+++ b/pressgang/media/pressgang/_sass/actions/_progress.scss
@@ -83,6 +83,7 @@
 					font-weight: bold;
 					.start {
 						background: url('../images/loader-small.gif') no-repeat center left;
+						color: $color-text-strong;
 					}
 				}
 			}
