When an action is finished, a check is now made to see if Apache needs to be restarted.  If it does, a message is shown to the user.

--- a/pressgang/media/pressgang/_sass/core/_settings.scss
+++ b/pressgang/media/pressgang/_sass/core/_settings.scss
@@ -20,6 +20,7 @@ $color-bg-header: #dfdfda;
 $color-bg-highlight: #fafada;
 $color-bg-muted: #ddd;
 $color-bg-notice: #fafafa;
+$color-bg-notice-strong: #fafaee;
 $color-bg-page: #efefec;
 $color-border: #bbb;
 $color-border-highlight: #efefec;
@@ -36,6 +37,7 @@ $color-text-header-accent: #a22;
 $color-text-header: #5f5f5a;
 $color-text-strong: #000;
 $color-text-success: #090;
+$color-text-warning: #774;
 $color-text-weak: #555;
 $color-text-very-weak: #999;
 $color-text: #333;
