--- a/pressgang/media/pressgang/_sass/actions/_progress.scss
+++ b/pressgang/media/pressgang/_sass/actions/_progress.scss
@@ -101,6 +101,7 @@
 	// Wrapper for an action error
 	.action-error {
 		background: $color-bg-error;
+		margin-top: 1.5em;
 		padding: 0.75em;
 		padding-bottom: 1.5em;
 
@@ -113,9 +114,20 @@
 	// Wrapper for the installation-complete message
 	.action-completed {
 		background: $color-bg-notice;
+		border: 1px solid $color-border;
 		margin-top: 1.5em;
 		padding: 0.75em;
 		padding-bottom: 1.5em;
+
+		// Wrapper for a restart-required warning
+		.restart-required {
+			background: $color-bg-notice-strong url("../images/icon-warning.png") no-repeat 0.5em center;
+			border-bottom: 1px solid $color-border;
+			color: $color-text-warning;
+			font-weight: bold;
+			padding: 0.75em 2.25em;
+			margin: -0.75em -0.75em 0.75em;
+		}
 
 		.blog-link {
 			font-weight: bold;
