--- a/pressgang/templates/pressgang/core/base.html
+++ b/pressgang/templates/pressgang/core/base.html
@@ -100,6 +100,7 @@
 	{% block all_javascript %}
 
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
+		<script type="text/javascript" src="{% url pressgang:jsi18n-catalog %}"></script>
 		<script type="text/javascript" src="{{ MEDIA_URL }}pressgang/js/core/init.js"></script>
 		{% block javascript %}{% endblock %}
 
