--- a/pressgang/media/pressgang/css/pressgang.css
+++ b/pressgang/media/pressgang/css/pressgang.css
@@ -495,7 +495,8 @@ body.lockdown-confirmation .buttons {
       font-weight: bold; }
     body.lockdown-confirmation .buttons .button.reject {
       background: #dfdfda;
-      color: #5f5f5a; }
+      color: #5f5f5a;
+      text-shadow: 1px 1px 0 #f5f5f5; }
       body.lockdown-confirmation .buttons .button.reject:hover {
         background: #e4e4df; }
 
